# MCXA153_CMake_Template_Project

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
